--- a/html/simplenews.html
+++ b/html/simplenews.html
@@ -2,6 +2,48 @@
 <html>
     <head><title>Simple News Link Scrapper</title></head>
     <body>
-        <ol></ol>
+        <ol><li><a href='http://www.aljazeera.com/news/2018/03/syria-war-reports-eastern-ghouta-chemical-attack-180311061805261.html' target='_blank'>Battles rage in Eastern Ghouta, as 'toll tops 1,000'</a></li>
+<li><a href='http://www.aljazeera.com/news/2018/03/china-xi-jinping-expected-secure-lifetime-presidency-180311062057325.html' target='_blank'>China approves 'lifetime presidency' change</a></li>
+<li><a href='http://www.aljazeera.com/news/2018/03/young-palestinian-man-shot-dead-occupied-west-bank-180310170914971.html' target='_blank'>Young Palestinian man shot dead in occupied West Bank</a></li>
+<li><a href='http://www.aljazeera.com/indepth/features/north-korean-defector-describes-life-home-cartoons-180216132727372.html' target='_blank'>Describing life in North Korea through cartoons</a></li>
+<li><a href='http://www.aljazeera.com/news/2018/03/indigenous-yukpa-face-humanitarian-crisis-fleeing-venezuela-180310123952276.html' target='_blank'>'We'll end up dead': The indigenous fleeing Venezuela</a></li>
+<li><a href='http://www.aljazeera.com/blogs/americas/2018/03/weddell-sea-proposal-petition-create-world-largest-protected-area-arctic-180308201047815.html' target='_blank'>Weddell Sea proposal to create largest ocean sanctuary</a></li>
+<li><a href='http://www.aljazeera.com/programmes/insidestory/2018/03/trump-kim-jong-give-nuclear-ambitions-180310204403420.html' target='_blank'>Can Trump get Kim to give up his nuclear ambitions?</a></li>
+<li><a href='http://www.aljazeera.com/news/2018/03/sri-lanka-hate-speech-impunity-fuel-anti-muslim-violence-180310020253272.html' target='_blank'>What's driving anti-Muslim violence in Sri Lanka?</a></li>
+<li><a href='http://www.aljazeera.com/indepth/opinion/north-korea-summit-breakthrough-180310085934805.html' target='_blank'>US-North Korea Summit is no breakthrough</a></li>
+<li><a href='http://www.aljazeera.com/indepth/opinion/china-xi-putin-180309085746000.html' target='_blank'>Why China's Xi is not 'Putin-plus'</a></li>
+<li><a href='http://www.aljazeera.com/programmes/upfront/2018/03/time-apologised-invading-iraq-180309093248027.html' target='_blank'>Is it time the US apologised for invading Iraq?</a></li>
+<li><a href='http://www.aljazeera.com/news/2018/03/counter-terror-police-investigate-punish-muslim-day-letters-180310230543092.html' target='_blank'>'Punish a Muslim' letters call for Islamophobic attacks</a></li>
+<li><a href='http://www.aljazeera.com/news/2018/03/syria-army-splits-rebel-held-eastern-ghouta-180310114947325.html' target='_blank'>Syrian army 'splits Eastern Ghouta in three'</a></li>
+<li><a href='http://www.aljazeera.com/news/2018/03/180310204215697.html' target='_blank'>'A nation dying': Fears over Yemen stoked by MBS trip</a></li>
+<li><a href='http://www.aljazeera.com/news/2018/03/department-justice-introduces-proposal-ban-bump-stocks-180310160813889.html' target='_blank'>US Justice Department moves to ban bump stocks</a></li>
+<li><a href='http://www.aljazeera.com/news/2018/03/trump-military-parade-held-november-tanks-180310165836793.html' target='_blank'>Trump's military parade to go ahead, but without tanks</a></li>
+<li><a href='http://www.aljazeera.com/news/2018/03/pakistani-fashion-brand-sana-safinaz-criticised-ad-campaign-180310193055354.html' target='_blank'>Pakistan fashion brand slammed for 'exploiting culture'</a></li>
+<li><a href='http://www.aljazeera.com/news/2018/03/palestinians-reject-invitation-gaza-stakeholder-summit-180310112930201.html' target='_blank'>PA rejects US invitation to Gaza 'humanitarian summit'</a></li>
+<li><a href='http://www.aljazeera.com/news/2018/03/trump-deal-kim-jong-making-180310092025036.html' target='_blank'>Trump: Deal with Kim Jong-un 'in the making'</a></li>
+<li><a href='http://www.aljazeera.com/news/2018/03/qatar-informs-uae-bahrain-airspace-violations-180310074922788.html' target='_blank'>Qatar informs UN of more UAE, Bahrain airspace violations</a></li>
+<li><a href='http://www.aljazeera.com/news/2018/03/turkey-opposition-cumhuriyet-journalists-released-pending-trial-180310062238085.html' target='_blank'>Turkish opposition journalists released pending trial</a></li>
+<li><a href='http://www.aljazeera.com/programmes/' target='_blank'>VIDEO</a></li>
+<li><a href='http://www.aljazeera.com/indepth/opinion/locker-room-talks-italian-politics-normalised-sexism-180310110438413.html' target='_blank'>Locker-room talks: Italian politics and normalised sexism</a></li>
+<li><a href='http://www.aljazeera.com/indepth/opinion/migration-successful-climate-adaptation-strategy-180310102243520.html' target='_blank'>Migration is a successful climate adaptation strategy</a></li>
+<li><a href='http://www.aljazeera.com/indepth/opinion/britain-hold-answer-europe-woes-180309124914036.html' target='_blank'>Could Britain hold the answer to Europe's woes?</a></li>
+<li><a href='http://www.aljazeera.com/indepth/opinion/vulnerabilities-xi-jinping-china-communist-party-180309141431670.html' target='_blank'>The vulnerabilities of Xi Jinping and China's Communist Party</a></li>
+<li><a href='http://www.aljazeera.com/topics/regions/middleeast.html' target='_blank'>Middle East</a></li>
+<li><a href='http://www.aljazeera.comhttps://interactive.aljazeera.com/aje/2018/commuting-through-israeli-checkpoints/index.html' target='_blank'>Israel's military checkpoints: 'We live a life of injustice'</a></li>
+<li><a href='http://www.aljazeera.com/topics/categories/interactive.html' target='_blank'>Interactive</a></li>
+<li><a href='http://www.aljazeera.comhttps://interactive.aljazeera.com/aje/2018/child-marriage-niger/index.html' target='_blank'>Forced at 15: The young brides of Niger</a></li>
+<li><a href='http://www.aljazeera.com/topics/issues/women-rights.html' target='_blank'>Women's Rights</a></li>
+<li><a href='http://www.aljazeera.comhttps://interactive.aljazeera.com/aje/2017/gender-violence-in-guatemala/index.html' target='_blank'>Violence against women: 'I have learned not to fear'</a></li>
+<li><a href='http://www.aljazeera.com/topics/categories/health.html' target='_blank'>Health</a></li>
+<li><a href='http://www.aljazeera.comhttp://interactive.aljazeera.com/aje/2017/bolivia-mothers/index.html' target='_blank'>Why are so many women still dying in childbirth?</a></li>
+<li><a href='http://www.aljazeera.com/indepth/inpictures/week-pictures-women-day-sierra-leone-elections-180309120810695.html' target='_blank'>Week in pictures: From Women's Day to Sierra Leone elections</a></li>
+<li><a href='http://www.aljazeera.com/indepth/inpictures/girls-unwanted-country-women-180306133650069.html' target='_blank'>Girls unwanted: 'This is not a country for women'</a></li>
+<li><a href='http://www.aljazeera.com/indepth/inpictures/wakaliwood-cinematic-dream-uganda-slum-180305080922395.html' target='_blank'>Wakaliwood: The cinematic dream of a Ugandan slum</a></li>
+<li><a href='http://www.aljazeera.com/indepth/inpictures/female-de-miners-nagorno-karabakh-180306072703452.html' target='_blank'>The female de-miners of Nagorno-Karabakh</a></li>
+<li><a href='http://www.aljazeera.com/news/2018/03/180310204215697.html' target='_blank'>'A nation dying': Fears over Yemen stoked by MBS trip</a></li>
+<li><a href='http://www.aljazeera.com/programmes/insidestory/2018/03/britain-roll-red-carpet-saudi-crown-prince-180309183827413.html' target='_blank'>Why did Britain roll out the red carpet for MBS?</a></li>
+<li><a href='http://www.aljazeera.com/news/2018/03/mohammad-bin-salman-wraps-controversial-visit-uk-180309125131757.html' target='_blank'>Saudi crown prince wraps up controversial visit to UK</a></li>
+<li><a href='http://www.aljazeera.com/news/2018/03/demonstrators-mbs-hands-yemen-rally-visit-180307151305625.html' target='_blank'>'Hands off Yemen': London protests greet Saudi prince</a></li>
+</ol>
     </body>
 </html>
